# datadepot

./: .gitignore  MANIFEST.in  README.md  datasets.py  pyproject.toml
.github/workflows/: release.yaml
datadepot/: __init__.py  _version.py  datasets.py
datadepot/data/: advertising.pkl  bank.pkl  caravan.pkl  cereal.pkl  churn.pkl  churn_ibm.pkl  churn_tel.pkl  drug.pkl  gapminder.pkl  house.pkl  house_price.pkl  insurance.pkl  marketing.pkl  mpg.pkl  red_wines.pkl  risk.pkl  taxi_zones.gpkg  white_wines.pkl
datavault/: __init__.py  datasets.py
dsf/: datasets.py
dsf/data/: churncredit.pkl
