[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "datadepot"
dynamic = ["version"]
description = "The datadepot package provides a collection of datasets used in the book Data Science Foundations and Machine Learning with Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Jeroen van Raak", email = "j.j.f.vanraak@uva.nl" }
]

urls = { "Homepage" = "https://github.com/vanraak/datadepot" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["datadepot"]
include = ["datadepot*"]
exclude = ["csv", "pickle", "sourcedata"]

[tool.setuptools_scm]
version_scheme = "tag"
local_scheme = "no-local-version"
write_to = "datadepot/_version.py"
